Added buttons for back in NewClass

--- a/StudentsAndTeachers/Views/Classes/ListOfClasses.cshtml
+++ b/StudentsAndTeachers/Views/Classes/ListOfClasses.cshtml
@@ -8,3 +8,6 @@
         <a asp-action="Class" asp-controller="Classes">@classCourse.name</a>
     }
 </div>
+<div>
+    <a asp-action="NewClass" asp-controller="Classes">New Class</a>
+</div>
