--- a/StudentsAndTeachers/Views/Classes/NewClass.cshtml
+++ b/StudentsAndTeachers/Views/Classes/NewClass.cshtml
@@ -12,7 +12,11 @@
         </div>
         <div class="form-group">
             <div class="btn-group col-md-offset-2 col-md-8">
-                <input class="btn btn-success" type="submit" value="Complete order" />
+                <input class="btn btn-success" type="submit" value="Create Class" />
+                @*<input class="btn btn-default" type="submit" value="Return " />*@
+            </div>
+            <div class="btn-group col-md-offset-2 col-md-8">
+                <input asp-action="ListOfClasses" class="btn btn-success" type="submit" value="Back To Classes List" />
                 @*<input class="btn btn-default" type="submit" value="Return " />*@
             </div>
         </div>
