--- a/StudentsAndTeachers/Views/Classes/NewClass.cshtml
+++ b/StudentsAndTeachers/Views/Classes/NewClass.cshtml
@@ -2,7 +2,7 @@
 
 <h1>NewClass</h1>
 <div>
-    <form asp-action="NewClass" method="post" class="form-horizontal" role="form">
+    <form asp-action="NewClassCreator" method="post" class="form-horizontal" role="form">
         <div class="form-group">
             <label asp-for="name" class="col-md-2 control-label"></label>
             <div class="col-md-5">
