--- a/StudentsAndTeachers/Views/_ViewImports.cshtml
+++ b/StudentsAndTeachers/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using StudentsAndTeachers
 @using StudentsAndTeachers.Models
 @using StudentsAndTeachers.ViewModels
-@addTagHelper StudentsAndTeachers.TagHelpers.*,GameTracker_release
+@addTagHelper StudentsAndTeachers.TagHelpers.*,StudentsAndTeachers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
